name:           recsch
version:        0.1.0.0
synopsis:       a
description:    a
author:         a
maintainer:     a
build-type:     Simple
cabal-version:  >= 1.10

executable solve
  main-is: Main.hs
  ghc-options:
  hs-source-dirs: .
  build-depends:
      recursion-schemes
    , base
    , data-fix
  other-modules: Main
  default-language: Haskell2010
